# master-thesis

./: .gitignore  .gitmodules  CITATION.cff  Makefile  README.md  TODO.md  main.md  metadata.yaml  setup.sh  thesis - defense presentation.pptx  watch.sh
Bibliography/: Acronyms.tex  Bibliography.bib  Bibliography.yaml
Chapter/: Approaches_to_offloading.md  Conclusion.md  Evaluation_and_Discussion.md  Example.md  Future_work.md  Introduction.md  Offloading_using_a_monadic_framework.md  Purely_functional_programming.md  Related_Work.md  The_case_for_offloading.md
Graphic/Raw/: CloneCloud.monopic  Haskell Overview.monopic  MAUI.monopic  MobiCOP.monopic  Multiple Interpreters.monopic  Runtime System.monopic
Template/: colophon.tex  colors-fonts.tex  default.tex  pandoc-preamble.tex  preamble.tex  preample.tex  titlepage.tex
Template/processed/: pandoc-preamble.tex
src/: .gitignore  FunctionMapping.txt  README.md  cabal.project  stack.yaml
src-etlas/: local.properties
src-etlas/app/: build.gradle
src-etlas/gradle/wrapper/: gradle-wrapper.properties
src-reflex/: build-ghc  build-ghcjs  default.nix  set-env.sh  stack-build.sh  start-server.sh  watch-js.sh  watch.sh
src-reflex/backend/: backend.cabal  stack.yaml
src-reflex/backend/src/: Main.hs
src-reflex/common/: common.cabal
src-reflex/common/src/Common/: Computation.hs  Operations.hs  Types.hs
src-reflex/css/: styles.css
src-reflex/frontend/: LICENSE  Setup.hs  frontend.cabal  stack.yaml
src-reflex/frontend/src/: Interpreter.hs  JavaScriptFFI.hs  Main.hs  MainWKWebView.hs  MainWarp.hs  MainWebView.hs  MainWebkit.hs  Offloader.hs  Profiler.hs  UI.hs
src-xcode/OffApp/OffApp/: AppDelegate.swift  Info.plist  ViewController.swift
src-xcode/OffApp/OffApp.xcodeproj/: project.pbxproj
src-xcode/OffApp/OffApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src-xcode/OffApp/OffApp.xcodeproj/project.xcworkspace/xcuserdata/tehnix.xcuserdatad/: UserInterfaceState.xcuserstate
src-xcode/OffApp/OffApp.xcodeproj/xcuserdata/tehnix.xcuserdatad/xcschemes/: xcschememanagement.plist
src-xcode/OffApp/OffApp/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
src-xcode/Offie/: .gitignore
src-xcode/Offie/Offie/: AppDelegate.swift  ViewController.swift
src-xcode/Offie/hs-src/: .ghc.environment.aarch64-ios-8.4.0.20180109  .ghc.environment.x86_64-ios-8.4.0.20180109
src-xcode/Offie/hs-src/src/: HsFFI.h  Lib.hs
src/ExtensibleOffload/: ExtensibleOffload.cabal  ExtensibleOffload.hs
src/FreeFun/: DerivedFree.hs  FreeFun.cabal  FreeFun.hs  LICENSE  Main.hs  ManualFree.hs  README.md  package.yaml
src/FreerFun/: FreerFun.cabal  FreerFun.hs
src/MonadTransformers/: MonadTransformers.cabal  MonadTransformers.hs
src/Playground/: Main.hs  Playground.cabal  Playground.hs  Unsafe.hs
src/Preprocessor/: Preprocessor.cabal  Preprocessor.hs
src/Rewrite/: Main.hs  Rewrite.cabal  Rewrite.hs
src/Template/: FunctionMapping.txt  Main.hs  TH.hs  Template.cabal  Template.hs
src/Unsafe/: Main.hs  Unsafe.cabal  Unsafe.hs
