name:                backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable backend
  main-is:             Main.hs
  build-depends:       base
                     , common
                     , reflex-dom
                     , freer-simple
                     , servant
                     , servant-server
                     , text
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded -dynamic
