name:                common
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:    Common.Operations
                    , Common.Types
                    , Common.Computation
  build-depends:      base
                    , freer-simple
  default-language:    Haskell2010
  default-extensions:  GADTs
                       LambdaCase
                       DataKinds
