name:                frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24

-- build-type: Custom
-- custom-setup
--   setup-depends: base
--                , Cabal
--                , cabal-macosx

-- executable frontend-warp
--   main-is:             MainWarp.hs
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle-warp
--                      , reflex-dom-core
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded
--                -dynamic

-- executable frontend-webkitgtk
--   if impl(ghcjs)
--       buildable: False
--   main-is:             MainWebkit.hs
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle-webkit2gtk
--                      , reflex-dom-core
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded

executable frontend-wkwebview
  if !os(osx) || impl(ghcjs)
      buildable: False
  main-is:             MainWebView.hs
  build-depends:       base
                     , common
                     , reflex-dom
                     , jsaddle-wkwebview
                     , reflex-dom-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded
               -dynamic


executable frontend-wkwebview-ios
  if os(osx) || impl(ghcjs)
      buildable: False
  main-is:             MainWebView.hs
  build-depends:       base
                     , common
                     , reflex-dom
                     , jsaddle-wkwebview
                     , reflex-dom-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded
