name:                frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24


executable frontend
  main-is:             Main.hs
  other-modules:       UI
                     , Interpreter
                     , JavaScriptFFI
                     , Profiler
                     , Offloader
  hs-source-dirs:      src
  if impl(ghcjs)
    build-depends:     base
                     , common
                     , reflex-dom
                     , jsaddle
                     , jsaddle-warp
                     , reflex-dom-core
                     , freer-simple
                     , containers
                     , lifted-async
                     , req
                     , data-default-class
                     , bytestring
                     , text
                     , ghcjs-base
  else
    build-depends:     base
                     , common
                     , reflex-dom
                     , jsaddle
                     , jsaddle-warp
                     , reflex-dom-core
                     , freer-simple
                     , containers
                     , lifted-async
                     , req
                     , data-default-class
                     , bytestring
                     , text
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
  default-language:    Haskell2010
  if impl(ghcjs)
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -dynamic -dedupe
  else
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -dynamic
  if impl(ghcjs)
        cpp-options: -DGHCJS_BROWSER

-- executable frontend-webkitgtk
--   if impl(ghcjs)
--       buildable: False
--   main-is:             MainWebkit.hs
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle-webkit2gtk
--                      , reflex-dom-core
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded

-- executable frontend-wkwebview
--   if !os(osx) || impl(ghcjs)
--       buildable: False
--   main-is:             MainWebView.hs
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle-wkwebview
--                      , reflex-dom-core
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded
--                -dynamic


-- executable frontend
--   if os(osx) || impl(ghcjs)
--       buildable: False
--   main-is:             MainWebView.hs
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle-wkwebview
--                      , reflex-dom-core
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded
