name:                frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24


------------------------- GHCJS -------------------------
executable frontend
  main-is:             Main.hs
  other-modules:       UI
                     , Interpreter
                     , JavaScriptFFI
                     , Profiler
                     , Offloader
  hs-source-dirs:      src
  if impl(ghcjs)
    build-depends:     base
                     , common
                     , reflex-dom
                     , reflex-dom-core
                     , jsaddle
                     , jsaddle-warp
                     , freer-simple
                     , containers
                     , lifted-async
                     , bytestring
                     , text
                     , ghcjs-base
  else
    build-depends:     base
                     , common
                     , reflex-dom
                     , reflex-dom-core
                     , jsaddle
                     , jsaddle-warp
                     , freer-simple
                     , containers
                     , lifted-async
                     , bytestring
                     , text
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
  default-language:    Haskell2010
  if impl(ghcjs)
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -dynamic -dedupe
  else
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -dynamic
  if impl(ghcjs)
        cpp-options: -DGHCJS_BROWSER


------------------------- macOS -------------------------
-- executable frontend
--   if !os(osx) || impl(ghcjs)
--       buildable: False
--   main-is:             MainWKWebView.hs
--   other-modules:       UI
--                      , Interpreter
--                      , JavaScriptFFI
--                      , Profiler
--                      , Offloader
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle
--                      , jsaddle-wkwebview
--                      , reflex-dom-core
--                      , freer-simple
--                      , containers
--                      , lifted-async
--                      , bytestring
--                      , text
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -Wall -threaded -dynamic
--   default-extensions:  GADTs
--                        LambdaCase
--                        OverloadedStrings
--                        RecursiveDo
--                        ScopedTypeVariables
--                        DataKinds
--                        TypeOperators


------------------------- iOS -------------------------
-- executable frontend
--   if os(osx) || impl(ghcjs)
--       buildable: False
--   main-is:             MainWKWebView.hs
--   other-modules:       UI
--                      , Interpreter
--                      , JavaScriptFFI
--                      , Profiler
--                      , Offloader
--   build-depends:       base
--                      , common
--                      , reflex-dom
--                      , jsaddle
--                      , jsaddle-wkwebview
--                      , reflex-dom-core
--                      , freer-simple
--                      , containers
--                      , lifted-async
--                      , text
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options: -threaded
--   default-extensions:  GADTs
--                        LambdaCase
--                        OverloadedStrings
--                        RecursiveDo
--                        ScopedTypeVariables
--                        DataKinds
--                        TypeOperators
