name:           Preprocessor
version:        0.1.0.0
category:       Miscellaneous
author:         Christian Kjaer Laustsen
maintainer:     ckl@codetalk.io
copyright:      Christian Kjaer Laustsen
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

library
  exposed-modules:
                       Preprocessor
  build-depends:       base >= 4.9 && < 5
                     , haskell-src-exts
                     , ghc-exactprint
  ghc-options:         -Wall
  default-language:    Haskell2010
